<resources>
    <string name="app_name">FirstProgram</string>
    <string name="e_contact">e_contact</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="one_page_activity">Courses</string>
    <string name="header">Only nature</string>
    <string name="status">In working</string>
<string name="text">
Planting 21 trees and 32 bush!
    Nature, in the broadest sense, is the natural, physical, or material world or universe. "Nature" can refer to the phenomena of the phisical world, and also to life in general.
</string>
    <string name="toolbarText">CE-1257218</string>
    <string name="create">Created</string>
    <string name="registered">Registered</string>
    <string name="deadline">Resolve to</string>
    <string name="responsible">Responsible</string>
    <string name="responsible_name">Kulynych</string>
    <string name="created_date">15 march 2016</string>
    <string name="registered_date">16 march 2016</string>
    <string name="deadline_date">25 march 2016</string>
    <string name="action_settings">Settings</string>
    <string name="tab_in_working">In working</string>
    <string name="tab_done">Done</string>
    <string name="tab_expect">Expect</string>
    <string name="appeal_on_the_map">Appeal on the map</string>
    <string name="all_appeal">All appeal</string>
    <string name="sign_in">Sign in</string>
    <string name="header_1">Dismantling of other objects that are in the list of mail</string>
    <string name="header_2">Questions regarding the overdue electricity</string>
    <string name="header_3">Repair and maintenance of elevators</string>
    <string name="header_4">Cleaning and sanitary condition of the territory</string>
    <string name="header_5">Municipal household</string>
    <string name="header_6">Landscaping and construction</string>
    <string name="header_7">1Landscaping and construction</string>
    <string name="header_8">2Landscaping and construction</string>
    <string name="header_9">3Landscaping and construction</string>
    <string name="address_1">st. Vadim Chieftain 38</string>
    <string name="address_2">st. Vadim Chieftain 42</string>
    <string name="address_3">st. Vadim Chieftain 28</string>
    <string name="address_4">st. Vadim Chieftain 41</string>
    <string name="address_5">st. Vadim Chieftain 22</string>
    <string name="address_6">st. Vadim Chieftain 15</string>
    <string name="address_7">st. Vadim Chieftain 19</string>
    <string name="address_8">st. Vadim Chieftain 11</string>
    <string name="address_9">st. Vadim Chieftain 9</string>
    <string name="date_1">13.12.12</string>
    <string name="date_2">13.12.12</string>
    <string name="date_3">13.12.12</string>
    <string name="date_4">13.12.12</string>
    <string name="date_5">13.12.12</string>
    <string name="date_6">25.06.13</string>
    <string name="date_7">11.09.91</string>
    <string name="date_8">13.12.12</string>
    <string name="date_9">13.12.12</string>
    <string name="days_1">7 days</string>
    <string name="days_2">7 days</string>
    <string name="days_3">7 days</string>
    <string name="days_4">7 days</string>
    <string name="days_5">7 days</string>
    <string name="days_6">6 days</string>
    <string name="days_7">6 days</string>
    <string name="days_8">5 days</string>
    <string name="days_9">5 days</string>
    <string name="like_1">1</string>
    <string name="like_2">4</string>
    <string name="like_3">2</string>
    <string name="like_4">0</string>
    <string name="like_5">1</string>
    <string name="like_6">3</string>
    <string name="like_7">3</string>
    <string name="like_8">6</string>
    <string name="like_9">2</string>
    <color name="background">#e6e6e6</color>

</resources>
